Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.*;

public class Parser implements ParserConstants {
  public static Environment<ASTType> env = new Environment<>();

  static final public ASTNode Start() throws ParseException {ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 0:{
      jj_consume_token(0);
{if ("" != null) return null;}
      break;
      }
    case LET:
    case TRUE:
    case TYPE:
    case FALSE:
    case MINUS:
    case NIL:
    case TAG:
    case CONS:
    case MATCH:
    case LPAR:
    case LBRA:
    case DEREF:
    case NOT:
    case BOX:
    case IF:
    case WHILE:
    case PRINT:
    case PRINTLN:
    case FN:
    case String:
    case Id:
    case Num:{
      t = Program();
      jj_consume_token(TERM);
{if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Program() throws ParseException {List<ASTNode> statements = new ArrayList<>();
    ASTNode stmt;
    stmt = TopLevelStmt();
statements.add(stmt);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMIC:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMIC);
      stmt = TopLevelStmt();
statements.add(stmt);
    }
// Create a sequence of all statements
        ASTNode result = statements.get(0);
        for (int i = 1; i < statements.size(); i++) {
            result = new ASTSeq(result, statements.get(i));
        }
        {if ("" != null) return result;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode TopLevelStmt() throws ParseException {Token n;
    ASTType t1;
    ASTNode e1;
    HashMap<String, ASTType> lbl = new HashMap<>();
    if (jj_2_1(3)) {
      jj_consume_token(TYPE);
      n = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      t1 = Type();
lbl.put(n.image, t1);
        {if ("" != null) return new ASTTypeDef(lbl, new ASTUnit());}
    } else if (jj_2_2(2)) {
      jj_consume_token(LET);
      n = jj_consume_token(Id);
ASTType t2 = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COLON:{
        jj_consume_token(COLON);
        t2 = Type();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(EQUAL);
      e1 = BA();
List<Bind> decls = new ArrayList<>();
        decls.add(new Bind(n.image, e1, t2));
        {if ("" != null) return new ASTLet(decls, new ASTUnit());}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case MINUS:
      case NIL:
      case TAG:
      case CONS:
      case MATCH:
      case LPAR:
      case LBRA:
      case DEREF:
      case NOT:
      case BOX:
      case IF:
      case WHILE:
      case PRINT:
      case PRINTLN:
      case FN:
      case String:
      case Id:
      case Num:{
        // Expression (handles complex lets, functions, etc.)
            e1 = Seq();
{if ("" != null) return e1;}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public ASTNode TypeDefs() throws ParseException {HashMap<String, ASTType> lbl = new HashMap<>();
    Token n;
    ASTType t1;
    label_2:
    while (true) {
      jj_consume_token(TYPE);
      n = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      t1 = Type();
      jj_consume_token(SEMIC);
lbl.put(n.image, t1);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
    }
{if ("" != null) return new ASTTypeDef(lbl, new ASTUnit());}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Let() throws ParseException {Token n;
  ASTNode t, e1, e2;
  ASTType t1;
  List<Bind> decls = new ArrayList<>();
  Environment<ASTType> letEnv = env.beginScope();
    if (jj_2_3(3)) {
      label_3:
      while (true) {
        jj_consume_token(LET);
        n = jj_consume_token(Id);
ASTType t2 = null;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          jj_consume_token(COLON);
          t2 = Type();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
// Pre-register type for recursive functions in the let scope
              if (t2 != null) {
                  letEnv.preDeclareBind(n.image, t2);
              }
        jj_consume_token(EQUAL);
        e1 = Let();
        jj_consume_token(SEMIC);
decls.add(new Bind(n.image, e1, t2));
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LET:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
      }
      e2 = Seq();
t = new ASTLet(decls, e2);
    } else if (jj_2_4(3)) {
HashMap<String, ASTType> lbl = new HashMap<>();
      label_4:
      while (true) {
        jj_consume_token(TYPE);
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        t1 = Type();
        jj_consume_token(SEMIC);
lbl.put(n.image, t1);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TYPE:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
      }
      e2 = Seq();
t = new ASTTypeDef(lbl, e2);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case MINUS:
      case NIL:
      case TAG:
      case CONS:
      case MATCH:
      case LPAR:
      case LBRA:
      case DEREF:
      case NOT:
      case BOX:
      case IF:
      case WHILE:
      case PRINT:
      case PRINTLN:
      case FN:
      case String:
      case Id:
      case Num:{
        t = Seq();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Seq() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = SeqExp();
    label_5:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_5;
      }
      op = jj_consume_token(SEMIC);
      t2 = SeqExp();
t1 = new ASTSeq(t1, t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode SeqExp() throws ParseException {Token op;
 ASTNode t1, t2;
    t1 = BA();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      op = jj_consume_token(ASSIGN);
      t2 = BA();
t1 = new ASTAssign(t1, t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode BA() throws ParseException {Token op;
    ASTNode t1, t2;
    t1 = BM();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      op = jj_consume_token(OR);
      t2 = BM();
t1 = new ASTOr(t1, t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode BM() throws ParseException {Token op;
    ASTNode t1, t2;
    t1 = Rel();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      op = jj_consume_token(AND);
      t2 = Rel();
t1 = new ASTAnd(t1, t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Rel() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = ListExpr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        op = jj_consume_token(EQ);
        break;
        }
      case GT:{
        op = jj_consume_token(GT);
        break;
        }
      case LT:{
        op = jj_consume_token(LT);
        break;
        }
      case GTEQ:{
        op = jj_consume_token(GTEQ);
        break;
        }
      case LTEQ:{
        op = jj_consume_token(LTEQ);
        break;
        }
      case DIF:{
        op = jj_consume_token(DIF);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = ListExpr();
switch (op.kind) {
           case EQ: t1 = new ASTEq(t1, t2); break;
           case GT: t1 = new ASTGt(t1, t2); break;
           case LT: t1 = new ASTLt(t1, t2); break;
           case GTEQ: t1 = new ASTGte(t1, t2); break;
           case LTEQ: t1 = new ASTLte(t1, t2); break;
           case DIF: t1 = new ASTNeq(t1, t2); break;
         }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode ListExpr() throws ParseException {ASTNode t1, t2; Token op;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LAZY_CONS_OP:
    case CONS_OP:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONS_OP:{
        op = jj_consume_token(CONS_OP);
        t2 = ListExpr();
t1 = new ASTCons(t1, t2);
        break;
        }
      case LAZY_CONS_OP:{
        op = jj_consume_token(LAZY_CONS_OP);
        t2 = ListExpr();
t1 = new ASTLazyCons(t1, t2);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Exp() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
if (op.kind == PLUS)
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Term() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = Apply();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        op = jj_consume_token(STAR);
        t2 = Apply();
t1 = new ASTMult(t1,t2);
        break;
        }
      case DIV:{
        op = jj_consume_token(DIV);
        t2 = Apply();
t1 = new ASTDiv(t1,t2);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Fact() throws ParseException {Token n, x, l, nilName;
    ASTNode t = null, e1, e2, body, alt;
    List<Bind> params = new ArrayList<>();
    List<String> paramNames = new ArrayList<>();  // Add this
    List<ASTType> paramTypes = new ArrayList<>(); // Add this
    ASTNode curriedBody;                         // Add this
    ASTType type = null;
    Map<String, ASTNode> fields;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Num:{
      n = jj_consume_token(Num);
t = new ASTInt(Integer.parseInt(n.image));
      break;
      }
    case TRUE:{
      n = jj_consume_token(TRUE);
t = new ASTBool(true);
      break;
      }
    case FALSE:{
      n = jj_consume_token(FALSE);
t = new ASTBool(false);
      break;
      }
    case Id:{
      n = jj_consume_token(Id);
t = new ASTId(n.image);
      break;
      }
    case BOX:{
      jj_consume_token(BOX);
      t = Fact();
t = new ASTBox(t);
      break;
      }
    case String:{
      n = jj_consume_token(String);
t = new ASTString(n.image.substring(1, n.image.length() - 1));
      break;
      }
    case DEREF:{
      jj_consume_token(DEREF);
      t = Fact();
t = new ASTDeref(t);
      break;
      }
    case NIL:{
      jj_consume_token(NIL);
t = new ASTNil();
      break;
      }
    case CONS:{
      jj_consume_token(CONS);
      jj_consume_token(LPAR);
      e1 = Let();
      jj_consume_token(COMMA);
      e2 = Let();
      jj_consume_token(RPAR);
t = new ASTCons(e1, e2);
      break;
      }
    case MATCH:{
      jj_consume_token(MATCH);
      t = Let();
      jj_consume_token(LBRA);
      if (jj_2_6(3)) {
        nilName = jj_consume_token(NIL);
        jj_consume_token(LISTARROW);
        e1 = Let();
        jj_consume_token(BAR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LPAR:{
          jj_consume_token(LPAR);
          x = jj_consume_token(Id);
          jj_consume_token(CONS_OP);
          l = jj_consume_token(Id);
          jj_consume_token(RPAR);
          break;
          }
        case Id:{
          x = jj_consume_token(Id);
          jj_consume_token(CONS_OP);
          l = jj_consume_token(Id);
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(LISTARROW);
        e2 = Let();
t = new ASTMatch(t, nilName.image, e1, x.image, l.image, e2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TAG:{
List<String> labels = new ArrayList<>();
            List<String> vars = new ArrayList<>();
            List<ASTNode> bodies = new ArrayList<>();
            ASTNode e;
          jj_consume_token(TAG);
          n = jj_consume_token(Id);
          jj_consume_token(LPAR);
          x = jj_consume_token(Id);
          jj_consume_token(RPAR);
          jj_consume_token(LISTARROW);
          e = Let();
labels.add(n.image);
            vars.add(x.image);
            bodies.add(e);
          label_11:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case BAR:{
              ;
              break;
              }
            default:
              jj_la1[21] = jj_gen;
              break label_11;
            }
            jj_consume_token(BAR);
            jj_consume_token(TAG);
            n = jj_consume_token(Id);
            jj_consume_token(LPAR);
            x = jj_consume_token(Id);
            jj_consume_token(RPAR);
            jj_consume_token(LISTARROW);
            e = Let();
labels.add(n.image);
                vars.add(x.image);
                bodies.add(e);
          }
t = new ASTUnionMatch(t, labels, vars, bodies);
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRA);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      t = Fact();
t = new ASTNeg(t);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      t = Fact();
t = new ASTNot(t);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LBRA);
      e1 = Let();
      jj_consume_token(RBRA);
      jj_consume_token(ELSE);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
t = new ASTIf(t, e1, e2);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      t = BA();
      jj_consume_token(LBRA);
      body = Let();
      jj_consume_token(RBRA);
t = new ASTWhile(t, body);
      break;
      }
    case FN:{
      jj_consume_token(FN);
      n = jj_consume_token(Id);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COLON:{
        jj_consume_token(COLON);
        type = Type();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
params.add(new Bind(n.image, null, type));
        paramNames.add(n.image);
        paramTypes.add(type);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          jj_consume_token(COLON);
          type = Type();
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          ;
        }
params.add(new Bind(n.image, null, type));
        paramNames.add(n.image);
        paramTypes.add(type);
      }
      jj_consume_token(ARROW);
      jj_consume_token(LBRA);
      body = Let();
      jj_consume_token(RBRA);
// Create nested functions for currying
        curriedBody = body;
        for (int i = paramNames.size() - 1; i >= 0; i--) {
            List<String> singleParam = List.of(paramNames.get(i));
